[package]
name = "reddit-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
plotly = { version = "0.8.4", features = ["kaleido"] }
roux = "2.2.9"
tokio = { version = "1.32.0", features = ["full"] }
